--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pizza-v2",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "engines": {
+    "node":"18.x"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
